# rust-target-feature-dispatch

./: .gitignore  Cargo.toml  README.md
src/: Cargo.toml  README.md
src/docs/: readme.md  target_feature_dispatch.md
src/src/: lib.rs
src/tests/: basic.rs
test-utils/: Cargo.toml  Makefile.toml
test-utils/common/: makefile.toml  test-run.toml
test-utils/doc/: testing.md
test-utils/maint-tool/: Cargo.toml
test-utils/maint-tool/src/: main.rs
tests/: Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
tests-unstable/: Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
tests-unstable/rust-toolchain-memo/: target_arch.sh  target_arch.txt  targets.txt
tests-unstable/test-expand/: Cargo.toml
tests-unstable/test-expand/src/: lib.rs  tests.rs
tests-unstable/test-expand/tests/dispatching-arm/: class-fallback-all-32-stable-static-none.expanded.rs  class-fallback-all-32-unstable-dynamic-none.expanded.rs  class-fallback-all-32-unstable-static-dotprod.expanded.rs  class-fallback-all-32-unstable-static-dotprod.rs  class-fallback-all-32-unstable-static-none.expanded.rs  class-fallback-all-64-stable-static-dotprod.expanded.rs  class-fallback-all-64-unstable-dynamic-dotprod.expanded.rs  class-fallback-all.rs  class-pseudo-32-stable-dynamic-dotprod.expanded.rs  class-pseudo-32-unstable-dynamic-none.rs  class-pseudo.rs  noclass-32-fallback-all-stable-dynamic-dotprod.expanded.rs  noclass-32-fallback-all-stable-static-none.expanded.rs  noclass-32-fallback-all-unstable-dynamic-dotprod.expanded.rs  noclass-32-fallback-all-unstable-dynamic-none.expanded.rs  noclass-32-fallback-all-unstable-static-dotprod.expanded.rs  noclass-32-fallback-all-unstable-static-none.expanded.rs  noclass-32-fallback-all.rs  noclass-64-fallback-all-stable-dynamic-dotprod.expanded.rs  noclass-64-fallback-all-stable-dynamic-none.expanded.rs  noclass-64-fallback-all-stable-dynamic-none.rs  noclass-64-fallback-all-stable-static-dotprod.expanded.rs  noclass-64-fallback-all-stable-static-none.expanded.rs  noclass-64-fallback-all-unstable-dynamic-dotprod.expanded.rs  noclass-64-fallback-all-unstable-dynamic-none.expanded.rs  noclass-64-fallback-all-unstable-static-dotprod.expanded.rs  noclass-64-fallback-all-unstable-static-none.expanded.rs  noclass-64-fallback-all.rs
tests-unstable/test-expand/tests/dispatching-loongarch64/: fallback-all-stable-dynamic-lvz.expanded.rs  fallback-all-stable-dynamic-lvz.rs  fallback-all-stable-static-none.expanded.rs  fallback-all-unstable-dynamic-lvz.expanded.rs  fallback-all-unstable-dynamic-none.expanded.rs  fallback-all-unstable-static-lvz.expanded.rs  fallback-all-unstable-static-none.expanded.rs  fallback-all.rs
tests-unstable/test-expand/tests/dispatching-powerpc/: class-fallback-all-32-stable-dynamic-none.expanded.rs  class-fallback-all.rs  class-pseudo-32-stable-dynamic-altivec.expanded.rs  class-pseudo-32-unstable-dynamic-none.expanded.rs  class-pseudo-32-unstable-static-altivec.expanded.rs  class-pseudo.rs  noclass-32-fallback-all-stable-dynamic-altivec.expanded.rs  noclass-32-fallback-all-stable-static-none.expanded.rs  noclass-32-fallback-all-unstable-dynamic-altivec.expanded.rs  noclass-32-fallback-all-unstable-dynamic-none.expanded.rs  noclass-32-fallback-all-unstable-static-altivec.expanded.rs  noclass-32-fallback-all-unstable-static-altivec.rs  noclass-32-fallback-all-unstable-static-none.expanded.rs  noclass-32-fallback-all.rs  noclass-64-fallback-all-stable-dynamic-altivec.expanded.rs  noclass-64-fallback-all-stable-dynamic-none.expanded.rs  noclass-64-fallback-all-unstable-dynamic-altivec.expanded.rs  noclass-64-fallback-all-unstable-dynamic-none.expanded.rs  noclass-64-fallback-all-unstable-static-altivec.expanded.rs  noclass-64-fallback-all-unstable-static-none.expanded.rs  noclass-64-fallback-all.rs
tests-unstable/test-expand/tests/dispatching-s390x/: fallback-all-stable-dynamic-none.expanded.rs  fallback-all-stable-static-vector-packed-decimal-enhancement-2.expanded.rs  fallback-all-unstable-dynamic-none.expanded.rs  fallback-all-unstable-dynamic-vector-packed-decimal-enhancement-2.expanded.rs  fallback-all-unstable-static-none.expanded.rs  fallback-all-unstable-static-vector-packed-decimal-enhancement-2.expanded.rs  fallback-all.rs
tests-unstable/test-run/: Cargo.toml
tests-unstable/test-run/src/: lib.rs  tests.rs
tests/rust-toolchain-memo/: .gitignore  target_arch.txt
tests/test-build/: Cargo.toml
tests/test-build/src/: tests.rs
tests/test-build/tests/arch-arm/feature/: fail-invalid-else.rs  fail-invalid-else.stderr
tests/test-build/tests/arch-riscv/feature/: fail-invalid-else.rs  fail-invalid-else.stderr
tests/test-build/tests/arch-x86/feature/: fail-invalid-else.rs  fail-invalid-else.stderr
tests/test-build/tests/common/arch/: expect-fail-all-arch.rs  expect-fail-all-arch.stderr  fail-archs-not-or.rs  fail-archs-not-or.stderr  fail-literal-not-string.rs  fail-literal-not-string.stderr  fail-not-literal.rs  fail-not-literal.stderr  fail-unknown-arg-syntax-1.rs  fail-unknown-arg-syntax-1.stderr  fail-unknown-arg-syntax-2.rs  fail-unknown-arg-syntax-2.stderr  pass-arch-normal-1.rs  pass-arch-or-1.rs  warn-literal-not-found.rs  warn-literal-not-found.stderr
tests/test-build/tests/common/attr/: fail-real-attr-1.rs  fail-real-attr-1.stderr  fail-real-attr-2.rs  fail-real-attr-2.stderr
tests/test-build/tests/common/clause-arch/: fail-ifpos-expr-without-enclosing.rs  fail-ifpos-expr-without-enclosing.stderr  pass-ifpos-empty.rs  pass-ifpos-expr-block.rs  pass-ifpos-expr-paren.rs
tests/test-expand/: Cargo.toml
tests/test-expand/src/: tests.rs
tests/test-expand/tests/arch-classes/: family-arm-1.expanded.rs  family-arm-1.rs  family-arm-2.expanded.rs  family-arm-2.rs  family-mips-1.rs  (+15 more)
tests/test-run/: Cargo.toml
tests/test-run/src/: tests.rs
(+82 files in other folders)
