# This workspace is only for package maintainance.

[workspace]
resolver = "3"
members = ["maint-tool"]

[workspace.package]
version = "1.0.0-rc.1"
license = "MIT"
authors = ["Tsukasa OI"]
homepage = "https://github.com/a4lg/rust-target-feature-dispatch"
repository = "https://github.com/a4lg/rust-target-feature-dispatch"
edition = "2024"
rust-version = "1.85"
