[package]
workspace = ".."
publish = false
name = "maint-tool"
description = "Maintainance tool for target_feature_dispatch"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
autotests = false

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
toml_edit = "0.22.24"

[dev-dependencies]
target-feature-dispatch = { path = "../../src" }
