[package]
workspace = ".."
publish = false
name = "test-run-unstable"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
autotests = false

[features]
default = [] # Although non-default, "enable" is mandatory.
enable = []
dispatch = []
detect-features = []
unstable = []
target-arm-neon = []
target-arm-dotprod = ["target-arm-neon"]

[dependencies]
target-feature-dispatch = { path = "../../src" }
