[package]
workspace = ".."
publish = false
name = "test-run"
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
autotests = false

[features]
default = [] # Although non-default, "enable" is mandatory.
enable = []
dispatch = []
detect-features = []
unstable = []
target-arm-neon = []
target-arm-dotprod = ["target-arm-neon"]
target-x86-sse2 = []
target-x86-avx2 = ["target-x86-sse2"]
target-wasm-simd128 = []

[dependencies]
target-feature-dispatch = { path = "../../src" }
